# LocalZIM

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bridge.js  crawler.rs  lib.rs  main.rs  search.rs  storage.rs  translate.rs  translate_manifest.json  zim.rs  zimwriter.rs
src/components/: Library.tsx  LocalePicker.tsx  Reader.tsx  StoragePanel.tsx  ThemePicker.tsx
src/lib/: backend.ts  i18n.ts  lang.test.ts  lang.ts  paths.test.ts  paths.ts  recents.ts  theme.ts
