[package]
name = "localzim"
version = "0.7.1"
description = "LocalZIM — leitor de bibliotecas ZIM (Kiwix) 100% offline"
authors = ["Taylor"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Anon5T4R/LocalZIM"

[lib]
# O sufixo `_lib` evita conflito entre o nome da lib e o do binário no Windows
# (https://github.com/rust-lang/cargo/issues/8519).
name = "localzim_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
percent-encoding = "2.3"
# Descompressão de clusters ZIM: zstd (arquivos modernos) e LZMA2/XZ (antigos).
zstd = "0.13"
xz2 = { version = "0.1", features = ["static"] }
# Índice de busca full-text local (o Xapian embutido nos ZIM exige C++; não é lido).
tantivy = "0.22"
# Checksum md5 do rodapé dos ZIM criados pelo app.
md-5 = "0.10"
# Crawler local "Criar .zim de um site": HTTP + reescrita de HTML.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip"] }
lol_html = "1"
# Tradução offline (Marian/OPUS-MT rodando no candle, CPU) + sha256 dos downloads.
candle-core = "0.11"
candle-nn = "0.11"
candle-transformers = "0.11"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
sha2 = "0.10"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
